clean up inspection issues

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,3 +34,9 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
+
+kotlin {
+    experimental {
+        coroutines "enable"
+    }
+}
