--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,6 @@ cache:
     - $HOME/.android/build-cache
 
 script: ./gradlew clean testDebugUnitTest lintDebug
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
