try adding language java

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,5 +22,6 @@ cache:
 
 script: ./gradlew clean testDebugUnitTest lintDebug
 
+language: java
 after_success:
   - bash <(curl -s https://codecov.io/bash)
