fixes so we can do ./gradlew clean build in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ cache:
     - $HOME/.gradle/wrapper/
     - $HOME/.android/build-cache
 
-script: ./gradlew clean testDebugUnitTest lintDebug
+script: ./gradlew clean build
