--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.emerssso.strictextras">
+    package="com.emerssso.strictextras.example">
 
     <application
         android:allowBackup="false"
@@ -11,8 +11,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".example.PizzaActivity" />
-        <activity android:name=".example.MainActivity">
+        <activity android:name=".PizzaActivity" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,7 +21,7 @@
         </activity>
 
         <service
-            android:name=".example.PizzaIntentService"
+            android:name=".PizzaIntentService"
             android:exported="false"/>
     </application>
 
